--- a/DeciToBin/Window3.xaml
+++ b/DeciToBin/Window3.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DeciToBin"
         mc:Ignorable="d"
-        Title="Leaderboard" Height="450" Width="800" WindowState="Normal" ResizeMode="CanResize" MinHeight="500" MinWidth="850" Closing="Window_Closing">
+        Title="Leaderboard" Height="580" Width="600" WindowState="Normal" ResizeMode="CanResize" MinHeight="580" MinWidth="600" Closing="Window_Closing">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="/dtb blank wp.png"/>
         </Grid.Background>
-        <Image HorizontalAlignment="Left" Height="234" VerticalAlignment="Top" Width="425" Source="/3-removebg-preview.png" Margin="217,-20,0,0" MinWidth="228"/>
-        <TextBlock x:Name="tblGameOver" HorizontalAlignment="Center" Height="50" MinHeight="31" Margin="0,66,0,0" TextWrapping="Wrap" Text="Top Players" VerticalAlignment="Top" Width="254" FontFamily="Dunkin" Foreground="#FF5D155D" FontSize="30" MinWidth="136" TextAlignment="Center"/>
-        <Border CornerRadius="10" Margin="159,189,173,85" BorderBrush="#FFA2A8DC" BorderThickness="3,3,3,3" >
+        <Image HorizontalAlignment="Left" Height="234" VerticalAlignment="Top" Width="425" Source="/3-removebg-preview.png" Margin="92,-20,0,0" MinWidth="228"/>
+        <TextBlock x:Name="tblGameOver" HorizontalAlignment="Left" Height="50" MinHeight="31" Margin="166,67,0,0" TextWrapping="Wrap" Text="Top Players" VerticalAlignment="Top" Width="254" FontFamily="Dunkin" Foreground="#FF5D155D" FontSize="30" MinWidth="136" TextAlignment="Center"/>
+        <Border CornerRadius="10" Margin="92,171,107,40" BorderBrush="#FFA2A8DC" BorderThickness="3,3,3,3" >
             <Border.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF663B71" Offset="1"/>
@@ -22,7 +22,10 @@
                 </LinearGradientBrush>
             </Border.Background>
         </Border>
-        <ListBox HorizontalAlignment="Left" Height="191" Margin="164,197,0,0" VerticalAlignment="Top" Width="501" Background="{x:Null}" Foreground="#FF5D155D" BorderBrush="{x:Null}"/>
+        <ListBox x:Name="lbPlayer" HorizontalAlignment="Left" Height="302" Margin="130,214,0,0" VerticalAlignment="Top" Width="124" Background="{x:Null}" Foreground="#FF5D155D" BorderBrush="{x:Null}" FontSize="14" FontFamily="Dunkin"/>
+        <ListBox x:Name="lbScore" HorizontalAlignment="Left" Height="302" Margin="300,214,0,0" VerticalAlignment="Top" Width="116" Background="{x:Null}" Foreground="#FF3F155D" BorderBrush="{x:Null}" FontSize="14" FontFamily="Dunkin"/>
+        <TextBlock x:Name="tblPlayer" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="92,191,0,0" MinWidth="138" Text="Player" RenderTransformOrigin="0.507,0.176"/>
+        <TextBlock x:Name="tblHighestRound" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="292,191,0,0" MinWidth="138"><Run Language="en-ph" Text="Highest "/><Run Text="Round"/></TextBlock>
 
     </Grid>
 </Window>
