--- a/DeciToBin/Window3.xaml
+++ b/DeciToBin/Window3.xaml
@@ -12,7 +12,7 @@
         </Grid.Background>
         <Image HorizontalAlignment="Left" Height="234" VerticalAlignment="Top" Width="425" Source="/3-removebg-preview.png" Margin="92,-20,0,0" MinWidth="228"/>
         <TextBlock x:Name="tblGameOver" HorizontalAlignment="Left" Height="50" MinHeight="31" Margin="166,67,0,0" TextWrapping="Wrap" Text="Top Players" VerticalAlignment="Top" Width="254" FontFamily="Dunkin" Foreground="#FF5D155D" FontSize="30" MinWidth="136" TextAlignment="Center"/>
-        <Border CornerRadius="10" Margin="92,171,107,40" BorderBrush="#FFA2A8DC" BorderThickness="3,3,3,3" >
+        <Border CornerRadius="10" Margin="55,171,58,40" BorderBrush="#FFA2A8DC" BorderThickness="3,3,3,3" >
             <Border.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF663B71" Offset="1"/>
@@ -22,10 +22,12 @@
                 </LinearGradientBrush>
             </Border.Background>
         </Border>
-        <ListBox x:Name="lbPlayer" HorizontalAlignment="Left" Height="302" Margin="130,214,0,0" VerticalAlignment="Top" Width="124" Background="{x:Null}" Foreground="#FF5D155D" BorderBrush="{x:Null}" FontSize="14" FontFamily="Dunkin"/>
-        <ListBox x:Name="lbScore" HorizontalAlignment="Left" Height="302" Margin="300,214,0,0" VerticalAlignment="Top" Width="116" Background="{x:Null}" Foreground="#FF3F155D" BorderBrush="{x:Null}" FontSize="14" FontFamily="Dunkin"/>
-        <TextBlock x:Name="tblPlayer" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="92,191,0,0" MinWidth="138" Text="Player" RenderTransformOrigin="0.507,0.176"/>
-        <TextBlock x:Name="tblHighestRound" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="292,191,0,0" MinWidth="138"><Run Language="en-ph" Text="Highest "/><Run Text="Round"/></TextBlock>
+        <ListBox x:Name="lbPlayer" HorizontalAlignment="Left" Height="302" Margin="84,214,0,0" VerticalAlignment="Top" Width="110" Background="{x:Null}" Foreground="#FF5D155D" BorderBrush="{x:Null}" FontSize="14" FontFamily="Dunkin"/>
+        <ListBox x:Name="lbScore" HorizontalAlignment="Left" Height="302" Margin="220,214,0,0" VerticalAlignment="Top" Width="116" Background="{x:Null}" Foreground="#FF3F155D" BorderBrush="{x:Null}" FontSize="14" FontFamily="Dunkin"/>
+        <ListBox x:Name="lbPlayTime" HorizontalAlignment="Left" Height="302" Margin="385,214,0,0" VerticalAlignment="Top" Width="116" Background="{x:Null}" Foreground="#FF3F155D" BorderBrush="{x:Null}" FontSize="14" FontFamily="Dunkin"/>
+        <TextBlock x:Name="tblPlayer" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="36,191,0,0" MinWidth="138" Text="Player" RenderTransformOrigin="0.507,0.176"/>
+        <TextBlock x:Name="tblHighestRound" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="202,191,0,0" MinWidth="138"><Run Language="en-ph" Text="Highest "/><Run Text="Round"/></TextBlock>
+        <TextBlock x:Name="tblPlayTime" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="385,191,0,0" MinWidth="138" Text="Total Play Time"/>
 
     </Grid>
 </Window>
