--- a/DeciToBin/Window3.xaml
+++ b/DeciToBin/Window3.xaml
@@ -7,12 +7,16 @@
         mc:Ignorable="d"
         Title="Leaderboard" Height="580" Width="600" WindowState="Normal" ResizeMode="CanResize" MinHeight="580" MinWidth="600" Closing="Window_Closing">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="31*"/>
+            <ColumnDefinition Width="89*"/>
+        </Grid.ColumnDefinitions>
         <Grid.Background>
             <ImageBrush ImageSource="/dtb blank wp.png"/>
         </Grid.Background>
-        <Image HorizontalAlignment="Left" Height="234" VerticalAlignment="Top" Width="425" Source="/3-removebg-preview.png" Margin="96,-20,0,0" MinWidth="228"/>
-        <TextBlock x:Name="tblGameOver" HorizontalAlignment="Left" Height="50" MinHeight="31" Margin="170,67,0,0" TextWrapping="Wrap" Text="Top Players" VerticalAlignment="Top" Width="254" FontFamily="Dunkin" Foreground="#FF5D155D" FontSize="30" MinWidth="136" TextAlignment="Center"/>
-        <Border CornerRadius="10" Margin="55,171,58,40" BorderBrush="#FFA2A8DC" BorderThickness="3,3,3,3" >
+        <Image HorizontalAlignment="Left" Height="234" VerticalAlignment="Top" Width="425" Source="/3-removebg-preview.png" Margin="96,-20,0,0" MinWidth="228" Grid.ColumnSpan="2"/>
+        <TextBlock x:Name="tblGameOver" HorizontalAlignment="Left" Height="50" MinHeight="31" Margin="15,67,0,0" TextWrapping="Wrap" Text="Top Players" VerticalAlignment="Top" Width="254" FontFamily="Dunkin" Foreground="#FF5D155D" FontSize="30" MinWidth="136" TextAlignment="Center" Grid.Column="1"/>
+        <Border CornerRadius="10" Margin="55,171,58,40" BorderBrush="#FFA2A8DC" BorderThickness="3,3,3,3" Grid.ColumnSpan="2" >
             <Border.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF663B71" Offset="1"/>
@@ -22,14 +26,15 @@
                 </LinearGradientBrush>
             </Border.Background>
         </Border>
-        <ListBox x:Name="lbPlayer" HorizontalAlignment="Left" Height="302" Margin="84,214,0,0" VerticalAlignment="Top" Width="110" Background="{x:Null}" Foreground="#FF5D155D" BorderBrush="{x:Null}" FontSize="14" FontFamily="Dunkin"/>
-        <ListBox x:Name="lbScore" HorizontalAlignment="Left" Height="302" Margin="220,214,0,0" VerticalAlignment="Top" Width="116" Background="{x:Null}" Foreground="#FF3F155D" BorderBrush="{x:Null}" FontSize="14" FontFamily="Dunkin"/>
-        <ListBox x:Name="lbPlayTime" HorizontalAlignment="Left" Height="302" Margin="385,214,0,0" VerticalAlignment="Top" Width="116" Background="{x:Null}" Foreground="#FF3F155D" BorderBrush="{x:Null}" FontSize="14" FontFamily="Dunkin"/>
-        <TextBlock x:Name="tblPlayer" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="36,191,0,0" MinWidth="138" Text="Player" RenderTransformOrigin="0.507,0.176"/>
-        <TextBlock x:Name="tblHighestRound" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="202,191,0,0" MinWidth="138"><Run Language="en-ph" Text="Highest "/><Run Text="Round"/></TextBlock>
-        <TextBlock x:Name="tblPlayTime" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="385,191,0,0" MinWidth="138" Text="Total Play Time"/>
-        <Image HorizontalAlignment="Left" Height="257" Margin="-44,29,0,0" VerticalAlignment="Top" Width="224" Source="/trophy_pic.png"/>
-        <Image HorizontalAlignment="Left" Height="257" Margin="420,29,0,0" VerticalAlignment="Top" Width="224" Source="/trophy_pic.png"/>
-
+        <ListBox x:Name="lbPlayer" HorizontalAlignment="Left" Height="302" Margin="67,234,0,0" VerticalAlignment="Top" Width="110" Background="{x:Null}" Foreground="#FF5D155D" BorderBrush="{x:Null}" FontSize="14" FontFamily="Dunkin" Grid.ColumnSpan="2"/>
+        <ListBox x:Name="lbScore" HorizontalAlignment="Left" Height="302" Margin="51,234,0,0" VerticalAlignment="Top" Width="94" Background="{x:Null}" Foreground="#FF3F155D" BorderBrush="{x:Null}" FontSize="14" FontFamily="Dunkin" Grid.Column="1"/>
+        <ListBox x:Name="lbPlayTime" HorizontalAlignment="Left" Height="302" Margin="180,234,0,0" VerticalAlignment="Top" Width="78" Background="{x:Null}" Foreground="#FF3F155D" BorderBrush="{x:Null}" FontSize="14" FontFamily="Dunkin" Grid.Column="1"/>
+        <ListBox x:Name="lbMode" HorizontalAlignment="Left" Height="302" Margin="266,238,0,0" VerticalAlignment="Top" Width="97" Background="{x:Null}" Foreground="#FF3F155D" BorderBrush="{x:Null}" FontFamily="Dunkin" FontSize="14" Grid.Column="1"/>
+        <TextBlock x:Name="tblPlayer" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="36,201,0,0" MinWidth="138" Text="Player" RenderTransformOrigin="0.507,0.176" Grid.ColumnSpan="2"/>
+        <TextBlock x:Name="tblHighestRound" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="2,201,0,0" MinWidth="138" Grid.Column="1"><Run Language="en-ph" Text="Highest "/><Run Text="Round"/></TextBlock>
+        <TextBlock x:Name="tblPlayTime" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="134,201,0,0" MinWidth="138" Text="Play Time" Grid.Column="1"/>
+        <TextBlock x:Name="tblMode" HorizontalAlignment="Left" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="97" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" MinWidth="138" Margin="243,201,0,0" Grid.Column="1"><Run Language="en-ph" Text="Mode"/></TextBlock>
+        <Image HorizontalAlignment="Left" Height="257" Margin="-45,29,0,0" VerticalAlignment="Top" Width="224" Source="/trophy_pic.png" Grid.ColumnSpan="2"/>
+        <Image HorizontalAlignment="Left" Height="257" Margin="268,30,0,0" VerticalAlignment="Top" Width="224" Source="/trophy_pic.png" Grid.Column="1"/>
     </Grid>
 </Window>
