--- a/DeciToBin/Window4.xaml
+++ b/DeciToBin/Window4.xaml
@@ -6,7 +6,53 @@
         xmlns:local="clr-namespace:DeciToBin"
         x:Class="DeciToBin.Window4"
         mc:Ignorable="d"
-        Title="Window4" Height="380" Width="400" MinHeight="380" MinWidth="400" WindowState="Normal" Closing="Window_Closing">
+        Title="Game Over" Height="380" Width="400" MinHeight="380" MinWidth="400" WindowState="Normal" Closing="Window_Closing">
+    <Window.Resources>
+        <SolidColorBrush x:Key="TextBox.Static.Border" Color="#FFABAdB3"/>
+        <SolidColorBrush x:Key="TextBox.MouseOver.Border" Color="#FF7EB4EA"/>
+        <SolidColorBrush x:Key="TextBox.Focus.Border" Color="#FF569DE5"/>
+        <Style x:Key="TextBoxStyle1" TargetType="{x:Type TextBox}">
+            <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource TextBox.Static.Border}"/>
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="KeyboardNavigation.TabNavigation" Value="None"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            <Setter Property="AllowDrop" Value="true"/>
+            <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
+            <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type TextBox}">
+                        <Border x:Name="border" CornerRadius="8" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="True">
+                            <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Opacity" TargetName="border" Value="0.56"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource TextBox.MouseOver.Border}"/>
+                            </Trigger>
+                            <Trigger Property="IsKeyboardFocused" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource TextBox.Focus.Border}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <MultiTrigger>
+                    <MultiTrigger.Conditions>
+                        <Condition Property="IsInactiveSelectionHighlightEnabled" Value="true"/>
+                        <Condition Property="IsSelectionActive" Value="false"/>
+                    </MultiTrigger.Conditions>
+                    <Setter Property="SelectionBrush" Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
+                </MultiTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="/dtb blank wp.png"/>
@@ -24,7 +70,7 @@
         </Border>
         <TextBlock x:Name="tblLoserMessage" HorizontalAlignment="Center" Height="23" MinHeight="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="222" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" Margin="0,129,0,0" MinWidth="138"><Run Text="You ran out of time"/><Run Text=" :"/><Run Language="en-ph" Text="("/></TextBlock>
         <TextBlock x:Name="tblGameOver" HorizontalAlignment="Center" Height="31" MinHeight="31" Margin="0,48,0,0" TextWrapping="Wrap" Text="Game Over!" VerticalAlignment="Top" Width="136" FontFamily="Dunkin" Foreground="#FF5D155D" FontSize="18" MinWidth="136"/>
-        <TextBox x:Name="tbNameInput" HorizontalAlignment="Center" Height="25" MinHeight="25" Margin="0,248,0,0" TextWrapping="Wrap" Text="Input Name" VerticalAlignment="Top" Width="137" FontSize="15" TextChanged="tbName_input" TextAlignment="Left" SelectionOpacity="6" BorderThickness="1,1,1,1" SelectionBrush="#FF854BB7" BorderBrush="#FF62449A" Background="#FFA2A8DC" Foreground="#FF886F6F" MinWidth="137" KeyUp="tbNameInput_KeyUp" SelectionChanged="tbNameInput_SelectionChanged"/>
+        <TextBox Style="{DynamicResource TextBoxStyle1}" x:Name="tbNameInput" HorizontalAlignment="Center" Height="25" MinHeight="25" Margin="0,248,0,0" TextWrapping="Wrap" Text="Input Name" VerticalAlignment="Top" Width="137" FontSize="15" TextChanged="tbName_input" TextAlignment="Left" SelectionOpacity="6" BorderThickness="1,1,1,1" SelectionBrush="#FF854BB7" BorderBrush="#FF62449A" Background="#FFA2A8DC" Foreground="#FF886F6F" MinWidth="137" KeyUp="tbNameInput_KeyUp" SelectionChanged="tbNameInput_SelectionChanged" FontFamily="Trebuchet MS"/>
         <TextBlock x:Name="tblLoserMessage_Copy" HorizontalAlignment="Center" Height="65" TextWrapping="Wrap" VerticalAlignment="Top" Width="228" FontFamily="Dunkin" Foreground="#FF352735" TextAlignment="Center" FontSize="14" MinWidth="138" Text="Please input your name below for the leaderboards." Margin="0,170,0,0"/>
         <Image HorizontalAlignment="Left" Height="180" Margin="-23,18,0,0" VerticalAlignment="Top" Width="155" Source="/game_over.png"/>
         <Image HorizontalAlignment="Left" Height="180" Margin="268,20,0,0" VerticalAlignment="Top" Width="155" Source="/game_over.png"/>
